Fix overlap on batch progress pages.

--- a/css/pages.css
+++ b/css/pages.css
@@ -744,3 +744,9 @@ button.BRicon.info {
 .uofm-dental-info table {
     display: none;
 }
+
+#progress {
+    overflow:hidden;
+    display:block;
+    clear:left;
+}
